#117641 Adapted unit tests to match the new implementation.